# python-project-49

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
