[project]
name = "brain-games"
version = "0.1.0"
description = "Brain Games project"
authors = [
    { name = "Andrii Kaliuzhnyi", email = "kaluznyjs43@gmail.com" }
]
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
